# facial_recognition

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  setup.dev.sh  setup.sh  stop.sh
Run Setup.app/Contents/: Info.plist
Run Setup.app/Contents/Resources/: applet.rsrc
Stop Services.app/Contents/: Info.plist
Stop Services.app/Contents/Resources/: applet.rsrc
backend/: .env  .env.example  MAC_SETUP.md  pyproject.toml  pyproject.toml.bak  setup.py  test_deepface.py  test_s3_direct.py
backend/src/: config.py  server.py
backend/src/api/: get_projects.py  images.py  main.py  processing.py  reports.py  scan_consent_folders.py  scan_watch_folder.py  watch_folder_monitor.py
backend/src/schemas/: processing.py  watch_folder.py
backend/src/services/: __init__.py  aws_s3_service.py  frame_analysis_service.py  frame_extraction_service.py  graphql_client.py  processing_service.py  project_import_service.py  test_frame_extraction.py  watch_folder_monitor.py  watch_folder_service.py
backend/src/tests/: conftest.py  test_graphql_client.py
backend/src/utils/: datetime_utils.py  env_loader.py  recognition_utils.py
backend/templates/: report_template.html
backend/tools/: test_facial_recognition.py
docs/: 1-PRD.md  2-AppFlow.md  3-BackendAPIEndpoints.md  4-FrontendGuidelines.md  5-ImplementationPlan.md  project_wrap_up.md  setup.md
frontend/: .env  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  (+1 more)
hasura/: config.yaml  full_migration.sql  init_hasura.sh  metadata.json
(+110 files in other folders)
